2003-04-16  Christian Ruppert <arc@users.sf.net>
	* uwm/special.h: pointer grabs are now confined to the screen's root
	  window to avoid trouble with crashing xfree when running multiheaded
	  multiscreen.

2003-02-09  Christian Ruppert <arc@users.sf.net>
	* uwm/workspaces.c: changed order of UpdateDesktop and SetWSBackground
	  calls in ChangeWS to prevent race condition problem in urdb2gtkd
	  --dump.

2003-01-09  Christian Ruppert <arc@gmx.li>
	* config/urdb: added font resources to set gvim's fixed font correctly.

2002-12-09  Christian Ruppert <arc@gmx.li>
	* configure.in: added language swedish (sv)
	* po/sv.po: added file sent in from David Weinehall <tao@kernel.org>,
	  thanks, David!
	* po/de.po, po/es.po: fixed german and spanish charset settings.

2002-11-24  Christian Ruppert <arc@gmx.li>
	* doc/html/Makefile.am: added rule to create link manual.tex

2002-11-10  Christian Ruppert <arc@gmx.li>
	* uwm/handlers.c: now DeUltimizing windows that are reparented by
	  cliets since we usually don't need to further care about them.
	* uwm/windows.c (UltimizeWin): check added to avoid ultimizing root
	  window.
	* uwm/wingroups.c (UpdateWinGroup): explicitly checked and disabled
	  window groups with either the root window or None as group leader.

2002-10-13  Christian Ruppert <arc@gmx.li>
	* uwm/special.c, uwm/special.h: added MyStrdup function to replace
	  strdup (which doesn't exist on all systems and has no error treatment)
	* uwm/nodes.c, uwm/nodes.h: bugfix changed name of melfunc to gelfunc to
	  be consistent with tree.h

2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/special.c: corrected default for CPPcall to "cpp" (quotes missing)
	* uwm/special.c: changed #include "time.h" to #include <time.h>

2002-09-12  Christian Ruppert <arc@gmx.li>
	* uwm/Makefile.am: added uwm/tree.c to the list .c-files and uwm/tree.h
	  to the list of non installed headers.
	* uwm/tree.c, uwm/tree.h: added a simple module to create and search in